--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.10.0",
-    "@astrojs/solid-js": "^1.1.0",
     "@astrojs/tailwind": "^2.0.2",
-    "@solid-primitives/audio": "^1.3.3",
     "astro": "^1.4.2",
+    "nanostores": "^0.7.0",
     "sharp": "^0.31.1",
-    "solid-js": "^1.4.3",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
