--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.10.0",
+    "@astrojs/solid-js": "^1.2.3",
     "@astrojs/tailwind": "^2.1.3",
-    "astro": "^1.9.0",
+    "@fontsource/cabin": "^4.5.9",
+    "@nanostores/solid": "^0.3.2",
+    "astro": "^1.9.2",
+    "ftp-ts": "^1.1.0",
     "nanostores": "^0.7.1",
     "sharp": "^0.31.3",
+    "solid-js": "^1.6.8",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
-    "prettier": "^2.8.1",
-    "prettier-plugin-astro": "^0.5.5"
+    "xo": "^0.53.1"
+  },
+  "xo": {
+    "space": true,
+    "semicolon": false
   }
 }
