--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^2.1.3",
     "@fontsource/cabin": "^4.5.9",
     "@nanostores/solid": "^0.3.2",
+    "@tailwindcss/typography": "^0.5.9",
     "astro": "^1.9.2",
     "ftp-ts": "^1.1.0",
     "nanostores": "^0.7.1",
