--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.10.0",
-    "@astrojs/solid-js": "^1.2.3",
-    "@astrojs/tailwind": "^2.1.3",
+    "@astrojs/image": "^0.13.0",
+    "@astrojs/solid-js": "^2.0.0",
+    "@astrojs/tailwind": "^3.0.0",
     "@fontsource/cabin": "^4.5.10",
     "@nanostores/solid": "^0.3.2",
-    "@tailwindcss/typography": "^0.5.9",
-    "astro": "^1.9.2",
+    "astro": "^2.0.0",
     "ftp-ts": "^1.1.0",
     "nanostores": "^0.7.1",
     "sharp": "^0.31.3",
@@ -29,6 +28,12 @@
   },
   "xo": {
     "space": true,
-    "semicolon": false
+    "semicolon": false,
+    "rules": {
+      "import/extensions": [
+        "error",
+        "never"
+      ]
+    }
   }
 }
