--- a/.github/workflows/build_deploy_to_pages.yml
+++ b/.github/workflows/build_deploy_to_pages.yml
@@ -2,7 +2,7 @@ name: Build and deploy to Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: ["astro-solid"]
   workflow_dispatch:
 
 permissions:
