--- a/package.json
+++ b/package.json
@@ -4,28 +4,27 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "check": "astro check",
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "xo && astro check && astro dev",
     "build": "xo && astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "xo"
+    "lint": "xo && astro check"
   },
   "dependencies": {
-    "@astrojs/image": "^0.15.1",
-    "@astrojs/solid-js": "^2.0.2",
-    "@astrojs/tailwind": "^3.0.1",
+    "@astrojs/solid-js": "^2.1.0",
+    "@astrojs/tailwind": "^3.1.1",
     "@fontsource/cabin": "^4.5.10",
     "@nanostores/solid": "^0.3.2",
-    "astro": "^2.0.16",
+    "astro": "^2.1.3",
     "ftp-ts": "^1.1.0",
     "nanostores": "^0.7.4",
-    "sharp": "^0.31.3",
-    "solid-js": "^1.6.11",
+    "solid-js": "^1.6.15",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
-    "@total-typescript/ts-reset": "^0.3.7",
+    "@total-typescript/ts-reset": "^0.4.2",
     "xo": "^0.53.1"
   },
   "xo": {
