--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^2.1.3",
     "ftp-ts": "^1.1.0",
     "nanostores": "^0.7.4",
+    "sharp": "^0.31.3",
     "solid-js": "^1.6.15",
     "tailwindcss": "^3.2.7"
   },
