stream UZG mp3s

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "xo && astro check"
   },
   "dependencies": {
+    "@astrojs/netlify": "^2.2.2",
     "@astrojs/solid-js": "^2.1.0",
     "@astrojs/tailwind": "^3.1.1",
     "@fontsource/cabin": "^4.5.10",
