--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
+  "packageManager": "pnpm@8.3.1",
   "scripts": {
     "check": "astro check",
     "dev": "astro dev",
