--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "xo && astro check"
   },
   "dependencies": {
-    "@astrojs/netlify": "^2.2.2",
+    "@astrojs/node": "^5.1.1",
     "@astrojs/solid-js": "^2.1.0",
     "@astrojs/tailwind": "^3.1.1",
     "@fontsource/cabin": "^4.5.10",
