--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/express/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
@@ -17,22 +18,35 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
+    "serve": "node server/entry.express",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.1.2",
-    "@builder.io/qwik-city": "^1.1.2",
-    "@types/eslint": "8.37.0",
-    "@types/node": "^20.1.0",
-    "@typescript-eslint/eslint-plugin": "5.59.2",
-    "@typescript-eslint/parser": "5.59.2",
-    "eslint": "8.40.0",
-    "eslint-plugin-qwik": "^1.1.2",
+    "@builder.io/qwik": "^1.1.4",
+    "@builder.io/qwik-city": "^1.1.4",
+    "@types/compression": "^1.7.2",
+    "@types/eslint": "8.40.0",
+    "@types/express": "4.17.17",
+    "@types/node": "^20.2.3",
+    "@typescript-eslint/eslint-plugin": "5.59.7",
+    "@typescript-eslint/parser": "5.59.7",
+    "autoprefixer": "^10.4.14",
+    "compression": "^1.7.4",
+    "eslint": "8.41.0",
+    "eslint-plugin-qwik": "^1.1.4",
+    "express": "4.18.2",
+    "postcss": "^8.4.23",
     "prettier": "2.8.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4",
-    "undici": "5.22.0",
-    "vite": "4.3.5",
+    "undici": "5.22.1",
+    "vite": "4.3.8",
     "vite-tsconfig-paths": "4.2.0"
+  },
+  "dependencies": {
+    "@fontsource/cabin": "^5.0.1",
+    "@total-typescript/ts-reset": "^0.4.2",
+    "ftp-ts": "^1.1.0"
   }
 }
