--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "@builder.io/qwik": "^1.1.5",
     "@builder.io/qwik-city": "^1.1.5",
     "@types/compression": "^1.7.2",
-    "@types/eslint": "8.40.0",
+    "@types/eslint": "8.40.1",
     "@types/express": "4.17.17",
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "5.59.9",
     "@typescript-eslint/parser": "5.59.9",
     "autoprefixer": "^10.4.14",
     "compression": "^1.7.4",
+    "cssnano": "^6.0.1",
     "eslint": "8.42.0",
     "eslint-plugin-qwik": "^1.1.5",
     "express": "4.18.2",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.23",
     "prettier": "2.8.8",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3",
