--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": ">=20.2.0"
   },
+  "packageManager": "pnpm",
   "private": true,
   "scripts": {
     "build": "qwik build",
