--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "css.lint.unknownAtRules": "ignore",
-  "prettier.prettierPath": "./node_modules/prettier",
+  // "prettier.prettierPath": "./node_modules/.bin/prettier",
   "editor.formatOnSave": true,
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
