--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,11 @@ thiserror = "1.0.38"
 tracing = { version = "0.1.37", optional = true }
 http = "0.2.8"
 serde = { version = "1.0.171", features = ["derive"] }
-async_ftp = { version = "6.0.0", optional = true }
+futures-util = { version = "0.3.28", optional = true }
+async-stream = { version = "0.3.5", optional = true }
+suppaftp = { version = "^5.1.2", features = ["async"], optional = true }
+bytes = "1.4.0"
+tokio-util = { version = "0.7.8", features = ["io", "compat"] }
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
@@ -39,7 +43,9 @@ ssr = [
     "leptos_meta/ssr",
     "leptos_router/ssr",
     "dep:tracing",
-    "dep:async_ftp",
+    "dep:futures-util",
+    "dep:async-stream",
+    "dep:suppaftp",
 ]
 
 [package.metadata.cargo-all-features]
@@ -56,14 +62,11 @@ codegen-units = 1
 lib-profile-release = "wasm-release"
 # The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
 # output-name = "dfm_site"
-
 # The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
 site-root = "target/site"
-
 # The site-root relative folder where all compiled output (JS, WASM and CSS) is written
 # Defaults to pkg
 site-pkg-dir = "pkg"
-
 # [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
 style-file = "style/dfm.out.css"
 # Assets source dir. All files found here will be copied and synchronized to site-root.
@@ -71,43 +74,33 @@ style-file = "style/dfm.out.css"
 #
 # Optional. Env: LEPTOS_ASSETS_DIR.
 assets-dir = "public"
-
 # The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
 site-addr = "127.0.0.1:3000"
-
 # The port to use for automatic reload monitoring
 reload-port = 3001
-
 # [Optional] Command to use when running end2end tests. It will run in the end2end dir.
 #   [Windows] for non-WSL use "npx.cmd playwright test"
 #   This binary name can be checked in Powershell with Get-Command npx
 end2end-cmd = "npx playwright test"
 end2end-dir = "end2end"
-
 #  The browserlist query used for optimizing the CSS.
 browserquery = "defaults"
-
 # Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
 watch = false
-
 # The environment Leptos will run in, usually either "DEV" or "PROD"
 env = "DEV"
-
 # The features to use when compiling the bin target
 #
 # Optional. Can be over-ridden with the command line parameter --bin-features
 bin-features = ["ssr"]
-
 # If the --no-default-features flag should be used when compiling the bin target
 #
 # Optional. Defaults to false.
 bin-default-features = false
-
 # The features to use when compiling the lib target
 #
 # Optional. Can be over-ridden with the command line parameter --lib-features
 lib-features = ["hydrate"]
-
 # If the --no-default-features flag should be used when compiling the lib target
 #
 # Optional. Defaults to false.
