--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,12 @@
     "comments": "on",
     "strings": true
   },
-  "css.validate": false
+  "css.validate": false,
+  "[rust]": {
+    "editor.tabSize": 2,
+    "editor.detectIndentation": false,
+    "editor.renderWhitespace": "trailing",
+    "files.trimTrailingWhitespace": true,
+  },
+  "rust-analyzer.cargo.features": ["ssr"],
 }
