--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
     "files.trimTrailingWhitespace": true
   },
   "rust-analyzer.cargo.features": ["ssr"],
+  "rust-analyzer.check.command": "clippy",
   "emeraldwalk.runonsave": {
     "commands": [
       {
