--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,12 @@ tracing = { version = "0.1.37", optional = true }
 http = "0.2.8"
 serde = { version = "1.0.171", features = ["derive"] }
 chrono = { version = "0.4.26" }
+leptos_image = "0.1.5"
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
 ssr = [
+    "leptos_image/ssr",
     "dep:axum",
     "dep:tokio",
     "dep:tower",
