--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ http = "0.2.8"
 serde = { version = "1.0.171", features = ["derive"] }
 chrono = { version = "0.4.26" }
 leptos_image = "0.1.5"
+axum-server = { version = "0.5.1", features = ["tls-rustls"], optional = true }
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
@@ -41,6 +42,7 @@ ssr = [
     "leptos_meta/ssr",
     "leptos_router/ssr",
     "dep:tracing",
+    "dep:axum-server",
 ]
 
 [package.metadata.cargo-all-features]
