--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,12 @@ log = "0.4"
 simple_logger = "4"
 tokio = { version = "1.25.0", optional = true }
 tower = { version = "0.4.13", optional = true }
-tower-http = { version = "0.4", features = ["fs"], optional = true }
+tower-http = { version = "0.4", features = [
+  "fs",
+  "compression-br",
+  "compression-deflate",
+  "compression-gzip",
+], optional = true }
 wasm-bindgen = "=0.2.87"
 thiserror = "1.0.38"
 tracing = { version = "0.1.37", optional = true }
@@ -32,17 +37,17 @@ axum-server = { version = "0.5.1", features = ["tls-rustls"], optional = true }
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
 ssr = [
-    "leptos_image/ssr",
-    "dep:axum",
-    "dep:tokio",
-    "dep:tower",
-    "dep:tower-http",
-    "dep:leptos_axum",
-    "leptos/ssr",
-    "leptos_meta/ssr",
-    "leptos_router/ssr",
-    "dep:tracing",
-    "dep:axum-server",
+  "leptos_image/ssr",
+  "dep:axum",
+  "dep:tokio",
+  "dep:tower",
+  "dep:tower-http",
+  "dep:leptos_axum",
+  "leptos/ssr",
+  "leptos_meta/ssr",
+  "leptos_router/ssr",
+  "dep:tracing",
+  "dep:axum-server",
 ]
 
 [package.metadata.cargo-all-features]
