--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-axum = { version = "0.6.4", optional = true }
+axum = { version = "0.6.4", features=["tracing"], optional = true }
 console_error_panic_hook = "0.1"
 console_log = "1"
 cfg-if = "1"
@@ -17,13 +17,14 @@ leptos_meta = { version = "0.4", features = ["nightly"] }
 leptos_router = { version = "0.4", features = ["nightly"] }
 log = "0.4"
 simple_logger = "4"
-tokio = { version = "1.25.0", optional = true }
+tokio = { version = "1.25.0", features=["tracing"], optional = true }
 tower = { version = "0.4.13", optional = true }
 tower-http = { version = "0.4", features = [
   "fs",
   "compression-br",
   "compression-deflate",
   "compression-gzip",
+  "trace",
 ], optional = true }
 wasm-bindgen = "=0.2.87"
 thiserror = "1.0.38"
@@ -33,6 +34,7 @@ serde = { version = "1.0.171", features = ["derive"] }
 chrono = { version = "0.4.26" }
 leptos_image = "0.1.5"
 axum-server = { version = "0.5.1", features = ["tls-rustls"], optional = true }
+console-subscriber = { version = "0.1.10", optional = true }
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
@@ -48,6 +50,7 @@ ssr = [
   "leptos_router/ssr",
   "dep:tracing",
   "dep:axum-server",
+  "dep:console-subscriber",
 ]
 
 [package.metadata.cargo-all-features]
