--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "astro check"
   },
   "dependencies": {
+    "@astrojs/check": "^0.2.0",
     "@astrojs/node": "^6.0.0",
     "@astrojs/solid-js": "^3.0.1",
     "@astrojs/tailwind": "^5.0.0",
@@ -24,7 +25,8 @@
     "nanostores": "^0.9.3",
     "sharp": "^0.32.6",
     "solid-js": "^1.7.12",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1"
