--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,10 @@ axum = { version = "0.6.4", features = ["tracing"], optional = true }
 console_error_panic_hook = "0.1"
 console_log = "1"
 cfg-if = "1"
-leptos = { version = "0.4", features = ["nightly"] }
-leptos_axum = { version = "0.4", optional = true }
-leptos_meta = { version = "0.4", features = ["nightly"] }
-leptos_router = { version = "0.4", features = ["nightly"] }
+leptos = { version = "0.5", features = ["nightly"] }
+leptos_axum = { version = "0.5", optional = true }
+leptos_meta = { version = "0.5", features = ["nightly"] }
+leptos_router = { version = "0.5", features = ["nightly"] }
 log = "0.4"
 tokio = { version = "1.25.0", features = ["tracing"], optional = true }
 tower = { version = "0.4.13", optional = true }
@@ -30,14 +30,15 @@ thiserror = "1.0.38"
 http = "0.2.8"
 serde = { version = "1.0.171", features = ["derive"] }
 chrono = { version = "0.4.26" }
-leptos_image = "0.1.5"
+# leptos_image = "0.1.5"
+# leptos_image = { git = "https://github.com/nicoburniske/leptos_image.git" }
 axum-server = { version = "0.5.1", features = ["tls-rustls"], optional = true }
-console-subscriber = { version = "0.1.10", optional = true }
+# console-subscriber = { version = "0.1.10", optional = true }
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
 ssr = [
-  "leptos_image/ssr",
+  # "leptos_image/ssr",
   "dep:axum",
   "dep:tokio",
   "dep:tower",
@@ -47,7 +48,7 @@ ssr = [
   "leptos_meta/ssr",
   "leptos_router/ssr",
   "dep:axum-server",
-  "dep:console-subscriber",
+  # "dep:console-subscriber",
 ]
 
 [package.metadata.cargo-all-features]
