--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ http = "0.2.8"
 serde = { version = "1.0.171", features = ["derive"] }
 chrono = { version = "0.4.26" }
 # leptos_image = "0.1.5"
-leptos_image = { git = "https://github.com/jinseok9338/leptos_image.git", branch = "leptos_5_support" }
+leptos_image = { git = "https://github.com/jinseok9338/leptos_image.git", rev = "e111471e67b731b6e2657d1f3649fd0a04f85cef" }
 axum-server = { version = "0.5.1", optional = true }
 # console-subscriber = { version = "0.1.10", optional = true }
 
