--- a/package.json
+++ b/package.json
@@ -27,16 +27,23 @@
   "devDependencies": {
     "@builder.io/qwik": "^1.3.1",
     "@builder.io/qwik-city": "^1.3.1",
-    "@types/eslint": "^8.44.8",
-    "@types/node": "^20.10.3",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "eslint": "^8.55.0",
+    "@types/eslint": "^8.56.0",
+    "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.56.0",
     "eslint-plugin-qwik": "^1.3.1",
-    "prettier": "^3.1.0",
-    "typescript": "^5.3.2",
-    "undici": "^5.26.0",
-    "vite": "^5.0.6",
-    "vite-tsconfig-paths": "^4.2.1"
+    "postcss": "^8.4.31",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "tailwindcss": "3.3.3",
+    "typescript": "^5.3.3",
+    "undici": "^6.2.0",
+    "vite": "^5.0.10",
+    "vite-tsconfig-paths": "^4.2.2"
+  },
+  "dependencies": {
+    "ftp-ts": "^1.1.0"
   }
 }
