--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/express/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
@@ -21,6 +22,7 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
+    "serve": "node server/entry.express",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
@@ -28,16 +30,18 @@
     "@builder.io/qwik": "^1.3.1",
     "@builder.io/qwik-city": "^1.3.1",
     "@types/eslint": "^8.56.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-plugin-qwik": "^1.3.1",
-    "postcss": "^8.4.31",
+    "express": "4.18.2",
+    "postcss": "^8.4.32",
     "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "tailwindcss": "3.3.3",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "3.4.0",
     "typescript": "^5.3.3",
     "undici": "^6.2.0",
     "vite": "^5.0.10",
