--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "type": "module",
   "scripts": {
     "build": "qwik build",
-    "build.client": "vite build",
+    "build.client": "vite build -c adapters/client/vite.config.ts",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/express/vite.config.ts",
+    "build.server": "vite build -c adapters/server/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
@@ -45,6 +45,7 @@
     "typescript": "^5.3.3",
     "undici": "^6.2.0",
     "vite": "^5.0.10",
+    "vite-plugin-compression2": "^0.11.0",
     "vite-tsconfig-paths": "^4.2.2"
   },
   "dependencies": {
