--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "type": "module",
   "scripts": {
-    "build": "qwik build",
+    "build": "qwik build && gzip -k dist/index.html",
     "build.client": "vite build -c adapters/client/vite.config.ts",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/server/vite.config.ts",
