--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
   "name": "solid-site",
-  "scripts": {
-    "dev": "solid-start dev",
-    "build": "solid-start build",
-    "start": "solid-start start"
-  },
   "type": "module",
+  "scripts": {
+    "dev": "vinxi dev",
+    "build": "vinxi build",
+    "start": "vinxi start"
+  },
   "devDependencies": {
     "@fontsource/cabin": "^5.0.16",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "solid-start-node": "^0.3.10",
     "tailwindcss": "^3.4.0",
-    "typescript": "^4.9.5",
-    "vite": "^4.5.1",
-    "vite-imagetools": "^6.2.8"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10",
+    "vite-imagetools": "^6.2.9"
   },
   "dependencies": {
-    "@solidjs/meta": "^0.29.3",
-    "@solidjs/router": "^0.8.4",
+    "@solidjs/router": "^0.10.5",
+    "@solidjs/start": "^0.4.2",
+    "autoprefixer": "^10.4.14",
     "ftp-ts": "^1.1.0",
+    "postcss": "^8.4.26",
     "solid-js": "^1.8.7",
-    "solid-start": "^0.3.10"
+    "tailwindcss": "^3.3.3",
+    "vinxi": "0.0.62"
   },
   "engines": {
     "node": "20"
