--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,10 @@ axum = { version = "0.6.4", features = ["tracing"], optional = true }
 console_error_panic_hook = "0.1"
 console_log = "1"
 cfg-if = "1"
-leptos = { version = "0.5", features = ["nightly"] }
-leptos_axum = { version = "0.5", optional = true }
+leptos = { version = "0.5", features = ["nightly", "experimental-islands"] }
+leptos_axum = { version = "0.5", optional = true, features = [
+  "experimental-islands",
+] }
 leptos_meta = { version = "0.5", features = ["nightly"] }
 leptos_router = { version = "0.5", features = ["nightly"] }
 log = "0.4"
