--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,2 +1,6 @@
-tab_spaces = 2
-max_width = 120
+tab_spaces = 4
+imports_granularity = "Crate"
+max_width = 80
+format_strings = true
+group_imports = "One"
+format_code_in_doc_comments = true
