Move from leptos_image to leptos_image_optimizer
leptos_image seems inactive

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,19 +19,19 @@ log = "0.4"
 tokio = { version = "1.25.0", features = ["tracing"], optional = true }
 tower = { version = "0.4.13", optional = true }
 tower-http = { version = "0.4", features = [
-  "fs",
-  "compression-br",
-  "compression-deflate",
-  "compression-gzip",
-  "trace",
+    "fs",
+    "compression-br",
+    "compression-deflate",
+    "compression-gzip",
+    "trace",
 ], optional = true }
 wasm-bindgen = "=0.2.87"
 thiserror = "1.0.38"
 http = "0.2.8"
 serde = { version = "1.0.171", features = ["derive"] }
 chrono = { version = "0.4.26" }
-# leptos_image = "0.1.5"
-leptos_image = { git = "https://github.com/jinseok9338/leptos_image.git", rev = "e111471e67b731b6e2657d1f3649fd0a04f85cef" }
+# leptos_image_optimizer = "0.1.5"
+leptos_image_optimizer = { git = "https://github.com/jinseok9338/leptos_image.git", branch = "main" }
 axum-server = { version = "0.5.1", optional = true }
 reqwest = { version = "0.11.23", optional = true }
 serde_json = { version = "1.0.110", optional = true }
@@ -40,19 +40,19 @@ serde_json = { version = "1.0.110", optional = true }
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
 ssr = [
-  "leptos_image/ssr",
-  "dep:axum",
-  "dep:tokio",
-  "dep:tower",
-  "dep:tower-http",
-  "dep:leptos_axum",
-  "leptos/ssr",
-  "leptos_meta/ssr",
-  "leptos_router/ssr",
-  "dep:axum-server",
-  # "dep:console-subscriber",
-  "dep:reqwest",
-  "dep:serde_json",
+    "leptos_image_optimizer/ssr",
+    "dep:axum",
+    "dep:tokio",
+    "dep:tower",
+    "dep:tower-http",
+    "dep:leptos_axum",
+    "leptos/ssr",
+    "leptos_meta/ssr",
+    "leptos_router/ssr",
+    "dep:axum-server",
+    # "dep:console-subscriber",
+    "dep:reqwest",
+    "dep:serde_json",
 ]
 reqwest = ["dep:reqwest"]
 serde_json = ["dep:serde_json"]
