--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -17,8 +17,7 @@ thiserror.workspace = true
 
 chrono = "0.4.31"
 serde = { version = "1.0.195", features = ["derive"] }
-reqwest = "0.11.23"
-serde_json = "1.0.111"
+reqwest = { version = "0.11.23", features = ["json"] }
 
 leptos_image_optimizer.workspace = true
 
