--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,22 +9,22 @@ lto = true
 opt-level = 'z'
 
 [workspace.dependencies]
-leptos = { version = "0.5", features = ["nightly"] }
-leptos_meta = { version = "0.5", features = ["nightly"] }
-leptos_router = { version = "0.5", features = ["nightly"] }
-leptos_axum = { version = "0.5" }
+leptos = { version = "0.6.0-rc1", features = ["nightly"] }
+leptos_meta = { version = "0.6.0-rc1", features = ["nightly"] }
+leptos_router = { version = "0.6.0-rc1", features = ["nightly"] }
+leptos_axum = { version = "0.6.0-rc1" }
 
-axum = "0.6.20"
+axum = "0.7"
 cfg-if = "1"
-console_error_panic_hook = "0.1.7"
+console_error_panic_hook = "0"
 console_log = "1"
-http = "0.2.9"
-log = "0.4.20"
-simple_logger = "4.2.0"
+http = "1"
+log = "0"
+simple_logger = "4"
 thiserror = "1"
-tokio = { version = "1.33.0", features = ["full"] }
-tower = { version = "0.4.13", features = ["full"] }
-tower-http = { version = "0.4", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
+tower = { version = "0.4", features = ["full"] }
+tower-http = { version = "0.5", features = ["full"] }
 wasm-bindgen = "0.2"
 
 leptos_image_optimizer = { git = "https://github.com/jaroel/leptos_image_optimizer.git", branch = "main" }
