--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,10 @@ lto = true
 opt-level = 'z'
 
 [workspace.dependencies]
-leptos = { version = "0.6.0-rc1", features = ["nightly"] }
-leptos_meta = { version = "0.6.0-rc1", features = ["nightly"] }
-leptos_router = { version = "0.6.0-rc1", features = ["nightly"] }
-leptos_axum = { version = "0.6.0-rc1" }
+leptos = { version = "0.6", features = ["nightly"] }
+leptos_meta = { version = "0.6", features = ["nightly"] }
+leptos_router = { version = "0.6", features = ["nightly"] }
+leptos_axum = { version = "0.6" }
 
 axum = "0.7"
 cfg-if = "1"
