--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.4.2",
-    "@builder.io/qwik-city": "^1.4.2",
+    "@builder.io/qwik": "^1.4.3",
+    "@builder.io/qwik-city": "^1.4.3",
     "@types/eslint": "^8.56.2",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.10",
+    "@types/node": "^20.11.12",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
-    "eslint-plugin-qwik": "^1.4.2",
+    "eslint-plugin-qwik": "^1.4.3",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
@@ -46,8 +46,8 @@
     "vite-tsconfig-paths": "^4.3.1"
   },
   "dependencies": {
+    "express": "4.18.2",
     "ftp-ts": "^1.1.0",
-    "undici": "^6.5.0",
-    "express": "4.18.2"
+    "undici": "^6.5.0"
   }
 }
