--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@builder.io/qwik": "^1.4.3",
     "@builder.io/qwik-city": "^1.4.3",
+    "@fontsource/cabin": "^5.0.16",
     "@types/eslint": "^8.56.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.12",
