--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,9 @@
     {
       "type": "docker-run",
       "label": "docker-run: release",
-      "dependsOn": ["docker-build"],
+      "dependsOn": [
+        "docker-build"
+      ],
       "platform": "node",
       "node": {
         "package": "${workspaceFolder}/.output/server/package.json"
@@ -26,7 +28,9 @@
     {
       "type": "docker-run",
       "label": "docker-run: debug",
-      "dependsOn": ["docker-build"],
+      "dependsOn": [
+        "docker-build"
+      ],
       "dockerRun": {
         "env": {
           "DEBUG": "*",
