--- a/package.json
+++ b/package.json
@@ -1,54 +1,52 @@
 {
-  "name": "my-qwik-empty-starter",
-  "description": "App with Routing built-in ready to create your app",
-  "engines": {
-    "node": ">=15.0.0"
-  },
-  "private": true,
-  "trustedDependencies": [
-    "sharp"
-  ],
-  "type": "module",
-  "scripts": {
-    "build": "qwik build && gzip -k dist/index.html",
-    "build.client": "vite build -c adapters/client/vite.config.ts",
-    "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/server/vite.config.ts",
-    "build.types": "tsc --incremental --noEmit",
-    "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
-    "dev": "vite --mode ssr",
-    "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "fmt": "prettier --write .",
-    "fmt.check": "prettier --check .",
-    "lint": "eslint \"src/**/*.ts*\"",
-    "preview": "qwik build preview && vite preview --open",
-    "serve": "node server/entry.express",
-    "start": "vite --open --mode ssr",
-    "qwik": "qwik"
-  },
-  "devDependencies": {
-    "@builder.io/qwik": "^1.5.1",
-    "@builder.io/qwik-city": "^1.5.1",
-    "@fontsource/cabin": "^5.0.17",
-    "@types/eslint": "^8.56.5",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.28",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.57.0",
-    "eslint-plugin-qwik": "^1.5.1",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
-    "tailwindcss": "3.4.1",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.6",
-    "vite-tsconfig-paths": "^4.3.2"
-  },
-  "dependencies": {
-    "express": "4.18.3",
-    "ftp-ts": "^1.1.0",
-    "undici": "^6.9.0"
-  }
+	"name": "my-qwik-empty-starter",
+	"description": "App with Routing built-in ready to create your app",
+	"engines": {
+		"node": ">=15.0.0"
+	},
+	"private": true,
+	"trustedDependencies": ["sharp"],
+	"type": "module",
+	"scripts": {
+		"build": "qwik build",
+		"build.client": "vite build -c adapters/client/vite.config.ts",
+		"build.preview": "vite build --ssr src/entry.preview.tsx",
+		"build.server": "vite build -c adapters/server/vite.config.ts",
+		"build.types": "tsc --incremental --noEmit",
+		"deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
+		"dev": "vite --mode ssr",
+		"dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+		"fmt": "prettier --write .",
+		"fmt.check": "prettier --check .",
+		"lint": "eslint \"src/**/*.ts*\"",
+		"preview": "qwik build preview && vite preview --open",
+		"serve": "node server/entry.express",
+		"start": "vite --open --mode ssr",
+		"qwik": "qwik"
+	},
+	"devDependencies": {
+		"@builder.io/qwik": "^1.5.1",
+		"@builder.io/qwik-city": "^1.5.1",
+		"@fontsource/cabin": "^5.0.17",
+		"@types/eslint": "^8.56.5",
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.11.28",
+		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@typescript-eslint/parser": "^7.2.0",
+		"autoprefixer": "^10.4.18",
+		"eslint": "^8.57.0",
+		"eslint-plugin-qwik": "^1.5.1",
+		"postcss": "^8.4.35",
+		"prettier": "^3.2.5",
+		"prettier-plugin-tailwindcss": "^0.5.12",
+		"tailwindcss": "3.4.1",
+		"typescript": "^5.4.2",
+		"vite": "^5.1.6",
+		"vite-tsconfig-paths": "^4.3.2"
+	},
+	"dependencies": {
+		"express": "4.18.3",
+		"ftp-ts": "^1.1.0",
+		"undici": "^6.9.0"
+	}
 }
