--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ tower = { version = "0.4", features = ["full"] }
 tower-http = { version = "0.5", features = ["full"] }
 wasm-bindgen = "0.2"
 
-leptos_image_optimizer = { git = "https://github.com/jaroel/leptos_image_optimizer.git", branch = "main" }
+leptos_image = "0.2.0"
 
 # See https://github.com/akesson/cargo-leptos for documentation of all the parameters.
 
