--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -19,15 +19,21 @@ chrono = "0.4.31"
 serde = { version = "1.0.195", features = ["derive"] }
 reqwest = { version = "0.11.23", features = ["json"] }
 
-leptos_image_optimizer.workspace = true
+leptos_image.workspace = true
 
 [features]
 default = []
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
+hydrate = [
+  "leptos_image/hydrate",
+  "leptos/hydrate",
+  "leptos_meta/hydrate",
+  "leptos_router/hydrate",
+]
 ssr = [
-    "leptos/ssr",
-    "leptos_meta/ssr",
-    "leptos_router/ssr",
-    "dep:leptos_axum",
-    "leptos_image_optimizer/ssr",
+  "leptos_image/ssr",
+  "leptos/ssr",
+  "leptos_meta/ssr",
+  "leptos_router/ssr",
+  "dep:leptos_axum",
+
 ]
