--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,4 +17,4 @@ tower.workspace = true
 tower-http.workspace = true
 log.workspace = true
 
-leptos_image_optimizer.workspace = true
+leptos_image.workspace = true
